plugins {
    id 'java'
}

apply plugin: 'java'

repositories {
    jcenter()
}

dependencies {
    compile 'com.google.guava:guava:28.1-jre'
    testCompile 'junit:junit:4.12'
}

group = 'mrowles'
version = '0.0.1'
description = 'java-snippets'
sourceCompatibility = '1.8'

jar {
    manifest {
        attributes 'Implementation-Version': version,
                'Main-Class': 'JavaSnippets'
    }
}

test {
    useTestNG()
    useJUnitPlatform()
//    include 'src/test/java/**'
    testLogging.showStandardStreams = true
    minHeapSize = "128m"
    maxHeapSize = "512m"
//    jvmArgs '-XX:MaxPermSize=256m'
    beforeTest { descriptor ->
        logger.lifecycle("Running test: " + descriptor)
    }
//    failFast = true
    onOutput { descriptor, event ->
        logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message)
    }
}
